Binary Search Tree implementation

--- a/python/binary_search_tree/binary_search_tree.ipynb
+++ b/python/binary_search_tree/binary_search_tree.ipynb
@@ -1,1 +1,187 @@
-
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "binary_search_tree.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {
+        "id": "EhNRfLMwr6oo"
+      },
+      "outputs": [],
+      "source": [
+        "class tree_node():\n",
+        "  def __init__(self, key):\n",
+        "    self.parent = None\n",
+        "    self.left = self.right = None\n",
+        "    self.key = key\n",
+        "\n",
+        "\n",
+        "#BST property: Let x be a node in a BST. If y is a node in the left subtree of x,\n",
+        "#              then y.key < x.key. If y is a node in the right subtree of x, then\n",
+        "#              y.key >= x.key\n",
+        "class BST():\n",
+        "\n",
+        "  def __init__(self):\n",
+        "    self.root = None\n",
+        "    \n",
+        "  def in_order_tree_walk(self, starting_root):\n",
+        "    if starting_root is not None:\n",
+        "      self.in_order_tree_walk(starting_root.left)\n",
+        "      print(starting_root.key)\n",
+        "      self.in_order_tree_walk(starting_root.right)\n",
+        "\n",
+        "  def search(self, root, value):\n",
+        "\n",
+        "    if root is None or root.key == value:\n",
+        "      return root\n",
+        "\n",
+        "    if value < root.key:\n",
+        "      return self.search(root.left, value)\n",
+        "    else:\n",
+        "      return self.search(root.right, value)\n",
+        "\n",
+        "\n",
+        "  def minimum(self, sub_tree__node):\n",
+        "\n",
+        "    cur_node = sub_tree__node\n",
+        "    while cur_node.left is not None:\n",
+        "      cur_node = cur_node.left\n",
+        "    \n",
+        "    return cur_node\n",
+        "\n",
+        "\n",
+        "  def maximum(self, sub_tree__node):\n",
+        "\n",
+        "    cur_node = sub_tree__node\n",
+        "    while cur_node.right is not None:\n",
+        "      cur_node = cur_node.right\n",
+        "    \n",
+        "    return cur_node\n",
+        "\n",
+        "  def successor(self, node):\n",
+        "\n",
+        "    #If node has right sub-tree (Non-null right child)\n",
+        "    if node.right is not None:\n",
+        "      return self.minimum(node.right)\n",
+        "\n",
+        "    node_parent = node.parent\n",
+        "\n",
+        "    #Keep going until there are no more parents or the current node is its parent left child\n",
+        "    while (node_parent is not None and node == node_parent.right):\n",
+        "      node = node_parent\n",
+        "      node_parent = node_parent.parent\n",
+        "\n",
+        "    return node_parent\n",
+        "\n",
+        "\n",
+        "  def predecessor(self, node):\n",
+        "\n",
+        "    #If node has left sub-tree (Non-null left child)\n",
+        "    if node.left is not None:\n",
+        "      return self.maximum(node.left)\n",
+        "\n",
+        "    #If node has no left children\n",
+        "    node_parent = node.parent\n",
+        "\n",
+        "    #Keep going until there are no more parents or the current node is its parent right child\n",
+        "    while (node_parent is not None and node == node_parent.left):\n",
+        "      node = node_parent\n",
+        "      node_parent = node_parent.parent\n",
+        "\n",
+        "    return node_parent\n",
+        "\n",
+        "  #Insert node with NULL pointers to parent, left & right child. Only contains key\n",
+        "  def insert(self, node_to_insert):\n",
+        "    \n",
+        "    # Two ptrs:\n",
+        "    # cur_parent: Tracks parent of cur_node. Needed when we hit Null ptr at bottom of tree\n",
+        "    # cur_node: Used to traverse down tree while satisfying BST property until Null ptr is reached\n",
+        "    cur_parent = None\n",
+        "    cur_node = self.root\n",
+        "\n",
+        "    #Traverse down tree following BST property until Null ptr is found\n",
+        "    while cur_node is not None:\n",
+        "      cur_parent = cur_node\n",
+        "      if node_to_insert.key < cur_node.key:\n",
+        "        cur_node = cur_node.left\n",
+        "      else:\n",
+        "        cur_node = cur_node.right\n",
+        "\n",
+        "    #Attach new node to its correct parent\n",
+        "    node_to_insert.parent = cur_parent\n",
+        "    \n",
+        "    #Case if tree is empty\n",
+        "    if cur_parent is None:\n",
+        "      self.root = node_to_insert\n",
+        "\n",
+        "    #Attach parent to new node in the correct position satisfying BST property\n",
+        "\n",
+        "    #Insert as left child of parent\n",
+        "    elif node_to_insert.key < cur_parent.key:\n",
+        "      cur_parent.left = node_to_insert\n",
+        "    #Insert as right child of parent\n",
+        "    else:\n",
+        "      cur_parent.right = node_to_insert\n",
+        "\n",
+        "  def transplant(self, old_node, new_node):\n",
+        "\n",
+        "    #Old node is root of tree\n",
+        "    if old_node.parent is None:\n",
+        "      self.root = new_node\n",
+        "\n",
+        "    #Connect old node's parent to new node: 2 conditions\n",
+        "\n",
+        "    #Old node is its parent left child\n",
+        "    elif old_node.parent.left == old_node:\n",
+        "      old_node.parent.left = new_node\n",
+        "\n",
+        "    #Old node is its parent right child\n",
+        "    else:\n",
+        "      old_node.parent.right = new_node\n",
+        "\n",
+        "    #Connect new node to old node's parent\n",
+        "    if new_node is not None:\n",
+        "      new_node.parent = old_node.parent\n",
+        "\n",
+        "  def delete(self, node_to_delete):\n",
+        "\n",
+        "    #Case: node_to_delete has no left child (has either a right or no child)\n",
+        "    if node_to_delete.left is None:\n",
+        "      self.transplant(node_to_delete, node_to_delete.right)\n",
+        "    #Case: node_to_delete only has a left child\n",
+        "    elif node_to_delete.right is None:\n",
+        "      self.transplant(node_to_delete, node_to_delete.left)\n",
+        "    #Case: node_to_delete has both a right and left child\n",
+        "    else:\n",
+        "      #Find successor in node_to_delete's right subtree\n",
+        "      min_in_right_subtree = self.minimum(node_to_delete.right)\n",
+        "\n",
+        "      #Sub-case: if node_to_delete is not min_in_right_subtree's parent\n",
+        "      #Do: Splice min_in_right_subtree up to become node_to_delete's right child\n",
+        "      #    and replace min_in_right_subtree first position by its right child\n",
+        "      if min_in_right_subtree.parent != node_to_delete:\n",
+        "        self.transplant(min_in_right_subtree, min_in_right_subtree.right)\n",
+        "        min_in_right_subtree.right = node_to_delete.right\n",
+        "        min_in_right_subtree.right.parent = min_in_right_subtree\n",
+        "      \n",
+        "      self.transplant(node_to_delete, min_in_right_subtree)\n",
+        "      min_in_right_subtree.left = node_to_delete.left\n",
+        "      min_in_right_subtree.left.parent = min_in_right_subtree"
+      ]
+    }
+  ]
+}
