Removed swap function

--- a/python/algorithms/heap_sort.ipynb
+++ b/python/algorithms/heap_sort.ipynb
@@ -39,12 +39,6 @@
         "  def parent(self, i):\n",
         "    return (i-1)//2\n",
         "\n",
-        "   #Helper function\n",
-        "  def swap(self, pos1, pos2):\n",
-        "    temp = self.heap_arr[pos1]\n",
-        "    self.heap_arr[pos1] = self.heap_arr[pos2]\n",
-        "    self.heap_arr[pos2] = temp\n",
-        "\n",
         "  def max_heapify(self, i):\n",
         "    left = self.left(i)\n",
         "    right = self.right(i)\n",
@@ -58,7 +52,7 @@
         "      largest = right\n",
         "    \n",
         "    if largest != i:\n",
-        "      self.swap(i, largest)\n",
+        "      self.heap_arr[i], self.heap_arr[largest] = self.heap_arr[largest], self.heap_arr[i]\n",
         "      self.max_heapify(largest)\n",
         "\n",
         "\n",
@@ -76,7 +70,7 @@
         "  heap.build_max_heap()\n",
         "  \n",
         "  for i in range(heap.heap_size - 1, 0, -1):\n",
-        "    heap.swap( 0, i)\n",
+        "    heap.heap_arr[i], heap.heap_arr[0] = heap.heap_arr[0], heap.heap_arr[i]\n",
         "    heap.heap_size -= 1\n",
         "    heap.max_heapify(0)\n",
         "\n",
