--- a/python/data_structures/heaps/max_heap.ipynb
+++ b/python/data_structures/heaps/max_heap.ipynb
@@ -17,7 +17,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "53qYB-vqLcIu"
       },
@@ -39,12 +39,6 @@
         "  def parent(self, i):\n",
         "    return (i-1)//2\n",
         "\n",
-        "   #Helper function\n",
-        "  def swap(self, pos1, pos2):\n",
-        "    temp = self.heap_arr[pos1]\n",
-        "    self.heap_arr[pos1] = self.heap_arr[pos2]\n",
-        "    self.heap_arr[pos2] = temp\n",
-        "\n",
         "  def max_heapify(self, i):\n",
         "    left = self.left(i)\n",
         "    right = self.right(i)\n",
@@ -58,7 +52,7 @@
         "      largest = right\n",
         "    \n",
         "    if largest != i:\n",
-        "      self.swap(i, largest)\n",
+        "      self.heap_arr[i], self.heap_arr[largest] = self.heap_arr[largest], self.heap_arr[i]\n",
         "      self.max_heapify(largest)\n",
         "\n",
         "\n",
